--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">🛡️</div>
                     <h3>Fully Insured</h3>
-                    <p>£10M public liability cover for complete peace of mind on every project.</p>
+                    <p>£5M public liability cover for complete peace of mind on every project.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🌿</div>
@@ -453,7 +453,7 @@
                 <div class="credential-card">
                     <div class="credential-logo" style="font-size: 4rem; display: flex; align-items: center; justify-content: center;">🛡️</div>
                     <h3>Fully Insured</h3>
-                    <p>£10M Public Liability Cover</p>
+                    <p>£5M Public Liability Cover</p>
                 </div>
             </div>
         </div>
@@ -514,13 +514,8 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
+                <p>📧 <a href="/cdn-cgi/l/email-protection#9af5fcfcf3f9ffdae8f5eff4feedf5f5fee9f5f6efeef3f5f4e9b4f9f5b4eff1"><span class="__cf_email__" data-cfemail="79161f1f101a1c390b160c171d0e16161d0a16150c0d1016170a571a16570c12">[email&#160;protected]</span></a></p>
                 <p>📍 Serving all of Kent</p>
             </div>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Weed Control Kent | Roundwood Solutions Ltd | All Rights Reserved</p>
-        </div>
-    </footer>
-</body>
-</html>
+        <div class=
