--- a/about.html
+++ b/about.html
@@ -465,7 +465,7 @@
                 </div>
                 
                 <h3>Our Service Area</h3>
-                <p>We proudly serve clients throughout Kent, including residential properties, commercial sites, agricultural land, and public spaces. No job is too large or too small for our experienced team.</p>
+                <p>We proudly serve clients throughout Kent, including residential properties, commercial sites, and public spaces. No job is too large or too small for our experienced team.</p>
             </div>
         </div>
     </section>
