--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional weed control services in Kent. BALI accredited, PA1 & PA6 AW certified. Specialized in Japanese Knotweed removal and invasive weed management.">
-    <meta name="keywords" content="weed control Kent, Japanese Knotweed removal, BALI accredited, herbicide spraying, invasive weed control, PA6 AW certified">
+    <meta name="description" content="Professional weed control services in Kent. BALI accredited, PA1 & PA6 AW certified. Commercial and residential weed management specialists.">
+    <meta name="keywords" content="weed control Kent, BALI accredited, herbicide spraying, commercial weed control, PA6 AW certified, aquatic weed control">
     <meta name="author" content="Roundwood Solutions Ltd">
     <title>Weed Control Kent | Professional Weed Management Services | BALI Accredited</title>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Weed Control Kent - Professional BALI Accredited Services">
-    <meta property="og:description" content="Expert weed control and Japanese Knotweed removal in Kent. BALI accredited with PA1 & PA6 AW certifications.">
+    <meta property="og:description" content="Expert commercial and residential weed control in Kent. BALI accredited with PA1 & PA6 AW certifications.">
     
     <!-- Schema.org structured data -->
     <script type="application/ld+json">
@@ -397,7 +397,7 @@
 
     <section class="hero">
         <h2>Professional Weed Control Services in Kent</h2>
-        <p>BALI Accredited | PA1 & PA6 AW Certified | Fully Insured | Expert Japanese Knotweed Removal</p>
+        <p>BALI Accredited | PA1 & PA6 AW Certified | Fully Insured | Expert Weed Control Specialists</p>
         <a href="https://forms.gle/VTCZ7VtjD9X9Gfdi9" target="_blank" class="cta-button">Contact Us</a>
     </section>
 
@@ -418,7 +418,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">🌿</div>
                     <h3>Specialist Services</h3>
-                    <p>Expert in Japanese Knotweed removal and invasive weed management across Kent.</p>
+                    <p>Expert in commercial and residential weed control and aquatic weed management across Kent.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">⚡</div>
@@ -464,15 +464,6 @@
             <h2 class="section-title">Our Services</h2>
             <div class="services-grid">
                 <div class="service-card">
-                    <h3>Japanese Knotweed Removal</h3>
-                    <ul>
-                        <li>Complete eradication programs</li>
-                        <li>Management plans for property transactions</li>
-                        <li>Survey and identification</li>
-                        <li>Long-term monitoring</li>
-                    </ul>
-                </div>
-                <div class="service-card">
                     <h3>General Weed Control</h3>
                     <ul>
                         <li>Commercial site clearance</li>
@@ -486,7 +477,6 @@
                     <ul>
                         <li>Aquatic weed control (PA6 AW)</li>
                         <li>Invasive species management</li>
-                        <li>Agricultural weed control</li>
                         <li>Environmental site management</li>
                     </ul>
                 </div>
