--- a/about.html
+++ b/about.html
@@ -487,7 +487,7 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="/cdn-cgi/l/email-protection#6a050c0c03090f2a18051f040e1d05050e1905061f1e03050419440905441f01"><span class="__cf_email__" data-cfemail="a1cec7c7c8c2c4e1d3ced4cfc5d6cecec5d2cecdd4d5c8cecfd28fc2ce8fd4ca">[email&#160;protected]</span></a></p>
+                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
                 <p>📍 Serving all of Kent</p>
             </div>
         </div>
