--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="/cdn-cgi/l/email-protection#9af5fcfcf3f9ffdae8f5eff4feedf5f5fee9f5f6efeef3f5f4e9b4f9f5b4eff1"><span class="__cf_email__" data-cfemail="79161f1f101a1c390b160c171d0e16161d0a16150c0d1016170a571a16570c12">[email&#160;protected]</span></a></p>
+                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
                 <p>📍 Serving all of Kent</p>
             </div>
         </div>
