--- a/services.html
+++ b/services.html
@@ -478,7 +478,7 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="/cdn-cgi/l/email-protection#c9a6afafa0aaac89bba6bca7adbea6a6adbaa6a5bcbda0a6a7bae7aaa6e7bca2"><span class="__cf_email__" data-cfemail="513e373738323411233e243f35263e3e35223e3d2425383e3f227f323e7f243a">[email&#160;protected]</span></a></p>
+                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
                 <p>📍 Serving all of Kent</p>
             </div>
         </div>
