--- a/about.html
+++ b/about.html
@@ -326,13 +326,14 @@
         <div class="header-content">
             <div class="logo">
                 <h1><span class="weed">WEED</span><span class="control">CONTROL</span><span class="kent">KENT</span></h1>
-                <p class="tagline">A specialist service by Roundwood Solutions Ltd</p>
+                <p class="tagline">A specialist service by <a href="https://roundwoodsolutions.co.uk" target="_blank" style="color: inherit; text-decoration: underline;">Roundwood Solutions Ltd</a></p>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About & BALI</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -474,7 +475,7 @@
             <div class="footer-section">
                 <h3>Weed Control Kent</h3>
                 <p>Professional commercial weed control and invasive species management services across Kent.</p>
-                <p>A specialist service by Roundwood Solutions Ltd</p>
+                <p>A specialist service by <a href="https://roundwoodsolutions.co.uk" target="_blank" style="color: #a8d5a8; text-decoration: none;">Roundwood Solutions Ltd</a></p>
                 <p><strong>BALI Accredited | PA1 & PA6 AW Certified</strong></p>
             </div>
             <div class="footer-section">
@@ -482,18 +483,18 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About & BALI Credentials</a>
                 <a href="services.html">Commercial Weed Control Services</a>
+                <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact Us</a>
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
+                <p>📧 <a href="/cdn-cgi/l/email-protection#eb848d8d82888eab99849e858f9c84848f9884879e9f82848598c58884c59e80"><span class="__cf_email__" data-cfemail="0a656c6c63696f4a78657f646e7d65656e7965667f7e63656479246965247f61">[email&#160;protected]</span></a></p>
                 <p>📍 Serving all Kent including Chatham, Maidstone, Rochester, Gillingham & Medway</p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Weed Control Kent - A service by Roundwood Solutions Ltd. All rights reserved.</p>
-            <p>BALI Accredited | PA1 & PA6 AW Certified | Professional Commercial Weed Control Contractors</p>
+            <p>&copy; 2025 Weed Control Kent - A service by <a href="https://roundwoodsolutions.co.uk" target="_blank" style="color: #a8d5a8; text-decoration: none;">Roundwood Solutions Ltd</a>. All rights reserved.</p>
         </div>
     </footer>
 </body>
