--- a/about.html
+++ b/about.html
@@ -489,7 +489,7 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="/cdn-cgi/l/email-protection#eb848d8d82888eab99849e858f9c84848f9884879e9f82848598c58884c59e80"><span class="__cf_email__" data-cfemail="0a656c6c63696f4a78657f646e7d65656e7965667f7e63656479246965247f61">[email&#160;protected]</span></a></p>
+                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
                 <p>📍 Serving all Kent including Chatham, Maidstone, Rochester, Gillingham & Medway</p>
             </div>
         </div>
