--- a/services.html
+++ b/services.html
@@ -528,7 +528,7 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="/cdn-cgi/l/email-protection#e28d84848b8187a2908d978c86958d8d86918d8e97968b8d8c91cc818dcc9789"><span class="__cf_email__" data-cfemail="6b040d0d02080e2b19041e050f1c04040f1804071e1f02040518450804451e00">[email&#160;protected]</span></a></p>
+                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
                 <p>📍 Serving all Kent including Chatham, Maidstone, Rochester, Gillingham & Medway</p>
             </div>
         </div>
