--- a/contact.html
+++ b/contact.html
@@ -564,12 +564,4 @@
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
                 <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
-                <p>📍 Serving all Kent including Chatham, Maidstone, Rochester, Gillingham & Medway</p>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Weed Control Kent - A service by <a href="https://roundwoodsolutions.co.uk" target="_blank" style="color: #a8d5a8; text-decoration: none;">Roundwood Solutions Ltd</a>. All rights reserved.</p>
-        </div>
-    </footer>
-</body>
-</html>
+                <p>📍 Serving all Kent including Chatham, Maidstone
