--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="/cdn-cgi/l/email-protection#e08f8686898385a0928f958e84978f8f84938f8c9594898f8e93ce838fce958b"><span class="__cf_email__" data-cfemail="0c636a6a656f694c7e637962687b6363687f636079786563627f226f63227967">[email&#160;protected]</span></a></p>
+                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
                 <p>📍 Serving all Kent including Chatham, Maidstone, Rochester, Gillingham & Medway</p>
             </div>
         </div>
