--- a/areas-we-cover.html
+++ b/areas-we-cover.html
@@ -438,7 +438,7 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="/cdn-cgi/l/email-protection#f59a93939c9690b5879a809b91829a9a91869a9980819c9a9b86db969adb809e"><span class="__cf_email__" data-cfemail="e28d84848b8187a2908d978c86958d8d86918d8e97968b8d8c91cc818dcc9789">[email&#160;protected]</span></a></p>
+                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
                 <p>📍 Serving all Kent including Chatham, Maidstone, Rochester, Gillingham & Medway</p>
             </div>
         </div>
