--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <meta name="author" content="Roundwood Solutions Ltd">
     <title>Weed Control Kent | Professional Weed Management Services | BALI Accredited</title>
     
-    <!-- Canonical URL - Fixes duplicate content issue -->
-    <link rel="canonical" href="https://weedcontrolkent.co.uk/">
-    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Weed Control Kent - Professional BALI Accredited Services">
@@ -392,6 +389,9 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About & BALI</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="areas-we-cover.html">Areas</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -507,4 +507,4 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="/cdn-cgi/l/email-protection#f69990909f9593b684998398928199999285999a83829f999885d89599d8839d"><span class="__cf_email__" data-cfemail="f19e9797989294b1839e849f95869e9e95829e9d848598
+                <p>📧 <a href="/cdn-cgi/l/email-protection#b1ded7d7d8d2d4f1c3dec4dfd5c6deded5c2deddc4c5d8dedfc29fd2de9fc4da"><span class="__cf_email__" data-cfemail="b1ded7d7d8d2d4f1c3dec4dfd5c6deded5c2deddc4c5d8
