--- a/services.html
+++ b/services.html
@@ -317,6 +317,150 @@
             }
         }
     </style>
+
+<!-- ═══════════════════════════════════════════════════════════════════
+     SERVICES PAGE SCHEMA - services.html
+     Copy this code and paste it in the <head> section
+     Place it BEFORE the closing </head> tag
+     ═══════════════════════════════════════════════════════════════════ -->
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ItemList",
+  "name": "Weed Control Kent Services",
+  "description": "Professional weed control services offered by Weed Control Kent across the county",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "item": {
+        "@type": "Service",
+        "name": "Commercial Weed Control",
+        "description": "Professional weed control services for commercial properties, businesses, retail parks, and office complexes across Kent",
+        "provider": {
+          "@id": "https://weedcontrolkent.co.uk/#business"
+        },
+        "serviceType": "Commercial Property Maintenance",
+        "areaServed": {
+          "@type": "State",
+          "name": "Kent"
+        }
+      }
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "item": {
+        "@type": "Service",
+        "name": "Industrial Estate Weed Control",
+        "description": "Comprehensive weed control for industrial estates, business parks, and commercial developments",
+        "provider": {
+          "@id": "https://weedcontrolkent.co.uk/#business"
+        },
+        "serviceType": "Industrial Grounds Maintenance",
+        "areaServed": {
+          "@type": "State",
+          "name": "Kent"
+        }
+      }
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "item": {
+        "@type": "Service",
+        "name": "School Grounds Weed Control",
+        "description": "Safe, professional weed control for schools, colleges, and educational facilities with flexible scheduling",
+        "provider": {
+          "@id": "https://weedcontrolkent.co.uk/#business"
+        },
+        "serviceType": "Educational Facility Maintenance",
+        "areaServed": {
+          "@type": "State",
+          "name": "Kent"
+        }
+      }
+    },
+    {
+      "@type": "ListItem",
+      "position": 4,
+      "item": {
+        "@type": "Service",
+        "name": "Car Park Weed Control",
+        "description": "Specialist weed control for car parks, parking areas, and paved surfaces",
+        "provider": {
+          "@id": "https://weedcontrolkent.co.uk/#business"
+        },
+        "serviceType": "Car Park Maintenance",
+        "areaServed": {
+          "@type": "State",
+          "name": "Kent"
+        },
+        "url": "https://weedcontrolkent.co.uk/car-park-weed-control.html"
+      }
+    },
+    {
+      "@type": "ListItem",
+      "position": 5,
+      "item": {
+        "@type": "Service",
+        "name": "Annual Maintenance Contracts",
+        "description": "Year-round weed control maintenance contracts with scheduled treatments and 20-30% cost savings",
+        "provider": {
+          "@id": "https://weedcontrolkent.co.uk/#business"
+        },
+        "serviceType": "Contract Maintenance",
+        "areaServed": {
+          "@type": "State",
+          "name": "Kent"
+        }
+      }
+    }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://weedcontrolkent.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://weedcontrolkent.co.uk/services.html"
+    }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "@id": "https://weedcontrolkent.co.uk/services.html",
+  "url": "https://weedcontrolkent.co.uk/services.html",
+  "name": "Professional Weed Control Services Kent | BALI Accredited",
+  "description": "Professional commercial weed control services across Kent. BALI accredited, PA1 & PA6 AW certified. Industrial estates, schools, car parks, businesses.",
+  "isPartOf": {
+    "@id": "https://weedcontrolkent.co.uk/#website"
+  },
+  "primaryImageOfPage": {
+    "@type": "ImageObject",
+    "url": "https://weedcontrolkent.co.uk/weed-control-kent-logo.png"
+  },
+  "inLanguage": "en-GB"
+}
+</script>
+
 </head>
 <body>
     <header>
