--- a/about.html
+++ b/about.html
@@ -89,6 +89,143 @@
             .certifications, .bali-section, .cta-section { margin-left: -1rem; margin-right: -1rem; }
         }
     </style>
+
+<!-- ═══════════════════════════════════════════════════════════════════
+     ABOUT PAGE SCHEMA - about.html
+     Copy this code and paste it in the <head> section
+     Place it BEFORE the closing </head> tag
+     ═══════════════════════════════════════════════════════════════════ -->
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "AboutPage",
+  "@id": "https://weedcontrolkent.co.uk/about.html",
+  "url": "https://weedcontrolkent.co.uk/about.html",
+  "name": "About Us | BALI Accredited Weed Control Kent",
+  "description": "Learn about Weed Control Kent - BALI accredited, PA1 & PA6 AW certified professionals. Founded in 2023 by Ben Brice and Ricky James.",
+  "about": {
+    "@type": "LocalBusiness",
+    "@id": "https://weedcontrolkent.co.uk/#business",
+    "name": "Weed Control Kent",
+    "legalName": "Roundwood Solutions Limited",
+    "foundingDate": "2023-07",
+    "founder": [
+      {
+        "@type": "Person",
+        "name": "Ben Brice",
+        "jobTitle": "Director",
+        "hasCredential": [
+          {
+            "@type": "EducationalOccupationalCredential",
+            "name": "PA1 Certification",
+            "credentialCategory": "certificate"
+          },
+          {
+            "@type": "EducationalOccupationalCredential",
+            "name": "PA6A Certification",
+            "credentialCategory": "certificate"
+          },
+          {
+            "@type": "EducationalOccupationalCredential",
+            "name": "PA6AW Certification",
+            "credentialCategory": "certificate"
+          }
+        ]
+      },
+      {
+        "@type": "Person",
+        "name": "Ricky James",
+        "jobTitle": "Director"
+      }
+    ],
+    "member": {
+      "@type": "Organization",
+      "name": "British Association of Landscape Industries",
+      "alternateName": "BALI"
+    },
+    "award": "BALI Accreditation October 2025",
+    "hasCredential": [
+      {
+        "@type": "EducationalOccupationalCredential",
+        "credentialCategory": "Professional Accreditation",
+        "name": "BALI Accreditation",
+        "recognizedBy": {
+          "@type": "Organization",
+          "name": "British Association of Landscape Industries"
+        },
+        "dateCreated": "2025-10"
+      },
+      {
+        "@type": "EducationalOccupationalCredential",
+        "credentialCategory": "Professional Certification",
+        "name": "PA1 - Safe Handling and Application of Pesticides",
+        "recognizedBy": {
+          "@type": "Organization",
+          "name": "NPTC"
+        },
+        "identifier": "0216-49"
+      },
+      {
+        "@type": "EducationalOccupationalCredential",
+        "credentialCategory": "Professional Certification",
+        "name": "PA6A - Safe Application Using Pedestrian Equipment",
+        "recognizedBy": {
+          "@type": "Organization",
+          "name": "NPTC"
+        },
+        "identifier": "0216-54"
+      },
+      {
+        "@type": "EducationalOccupationalCredential",
+        "credentialCategory": "Professional Certification",
+        "name": "PA6AW - Safe Application Near Water",
+        "recognizedBy": {
+          "@type": "Organization",
+          "name": "NPTC"
+        },
+        "identifier": "0216-54"
+      }
+    ],
+    "knowsAbout": [
+      "Commercial Weed Control",
+      "Pesticide Application",
+      "Grounds Maintenance",
+      "BALI Standards",
+      "Professional Landscaping"
+    ]
+  },
+  "mainEntity": {
+    "@id": "https://weedcontrolkent.co.uk/#business"
+  },
+  "isPartOf": {
+    "@id": "https://weedcontrolkent.co.uk/#website"
+  },
+  "inLanguage": "en-GB"
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://weedcontrolkent.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "About & BALI",
+      "item": "https://weedcontrolkent.co.uk/about.html"
+    }
+  ]
+}
+</script>
+
 </head>
 <body>
     <header>
