--- a/rochester-weed-control.html
+++ b/rochester-weed-control.html
@@ -261,6 +261,127 @@
             }
         }
     </style>
+
+<!-- Schema Markup for Rochester -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "@id": "https://weedcontrolkent.co.uk/rochester-weed-control.html#service",
+  "name": "Weed Control Rochester",
+  "description": "Professional commercial weed control services in Rochester, Kent. BALI-accredited, PA1 & PA6 AW certified technicians. Fast response for Rochester businesses.",
+  "provider": {
+    "@type": "LocalBusiness",
+    "@id": "https://weedcontrolkent.co.uk/#business",
+    "name": "Weed Control Kent",
+    "legalName": "Roundwood Solutions Limited",
+    "telephone": "+447545642021",
+    "email": "office@roundwoodsolutions.co.uk",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Rochester",
+      "addressRegion": "Kent",
+      "addressCountry": "GB"
+    }
+  },
+  "serviceType": "Commercial Weed Control",
+  "areaServed": {
+    "@type": "City",
+    "name": "Rochester",
+    "containedInPlace": {
+      "@type": "State",
+      "name": "Kent"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "51.3886",
+      "longitude": "0.5050"
+    }
+  },
+  "serviceOutput": {
+    "@type": "Thing",
+    "name": "Weed-free commercial property"
+  },
+  "category": "Landscaping Service",
+  "brand": {
+    "@type": "Brand",
+    "name": "Weed Control Kent"
+  },
+  "offers": {
+    "@type": "Offer",
+    "availability": "https://schema.org/InStock",
+    "priceCurrency": "GBP",
+    "priceSpecification": {
+      "@type": "PriceSpecification",
+      "priceCurrency": "GBP"
+    },
+    "areaServed": {
+      "@type": "City",
+      "name": "Rochester"
+    }
+  },
+  "hasCredential": [
+    {
+      "@type": "EducationalOccupationalCredential",
+      "name": "BALI Accreditation"
+    },
+    {
+      "@type": "EducationalOccupationalCredential",
+      "name": "PA1 & PA6 AW Certification"
+    }
+  ],
+  "additionalType": "https://schema.org/ProfessionalService"
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://weedcontrolkent.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Areas We Cover",
+      "item": "https://weedcontrolkent.co.uk/areas-we-cover.html"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Weed Control Rochester",
+      "item": "https://weedcontrolkent.co.uk/rochester-weed-control.html"
+    }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "@id": "https://weedcontrolkent.co.uk/rochester-weed-control.html",
+  "url": "https://weedcontrolkent.co.uk/rochester-weed-control.html",
+  "name": "Weed Control Rochester | Professional Commercial Weed Control Kent",
+  "description": "Professional weed control services in Rochester, Kent. BALI accredited for Rochester businesses, industrial estates, schools. Fast response.",
+  "isPartOf": {
+    "@id": "https://weedcontrolkent.co.uk/#website"
+  },
+  "about": {
+    "@id": "https://weedcontrolkent.co.uk/rochester-weed-control.html#service"
+  },
+  "primaryImageOfPage": {
+    "@type": "ImageObject",
+    "url": "https://weedcontrolkent.co.uk/weed-control-kent-logo.png"
+  },
+  "inLanguage": "en-GB"
+}
+</script>
 </head>
 <body>
     <header>
@@ -354,13 +475,9 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <p>📞 <a href="tel:07545642021">07545 642021</a></p>
-                <p>📧 <a href="mailto:office@roundwoodsolutions.co.uk">office@roundwoodsolutions.co.uk</a></p>
+                <p>📧 <a href="/cdn-cgi/l/email-protection#58373e3e313b3d182a372d363c2f37373c2b37342d2c3137362b763b37762d33"><span class="__cf_email__" data-cfemail="cca3aaaaa5afa98cbea3b9a2a8bba3a3a8bfa3a0b9b8a5a3a2bfe2afa3e2b9a7">[email&#160;protected]</span></a></p>
                 <p>📍 Based in Chatham | Serving Rochester</p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Weed Control Kent | <a href="https://roundwoodsolutions.co.uk" target="_blank" style="color: #3498db; text-decoration: none;">Roundwood Solutions Limited</a> | BALI Accredited. All rights reserved.</p>
-        </div>
-    </footer>
-</body>
-</html>
+            <p>&copy; 2025 Weed Control Kent | <a href="https://roundwoodsolutions.co.uk" target="_blank" style="co
