--- a/index.html
+++ b/index.html
@@ -13,40 +13,6 @@
     <meta property="og:title" content="Weed Control Kent - Professional BALI Accredited Services">
     <meta property="og:description" content="Expert commercial and residential weed control in Kent. BALI accredited with PA1 & PA6 AW certifications.">
     
-    <!-- Schema.org structured data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "name": "Weed Control Kent",
-      "description": "Professional weed control and invasive species management",
-      "telephone": "07545642021",
-      "email": "office@roundwoodsolutions.co.uk",
-      "address": {
-        "@type": "PostalAddress",
-        "addressRegion": "Kent",
-        "addressCountry": "GB"
-      },
-      "areaServed": "Kent",
-      "hasCredential": [
-        {
-          "@type": "EducationalOccupationalCredential",
-          "credentialCategory": "Professional Certification",
-          "name": "BALI Accredited"
-        },
-        {
-          "@type": "EducationalOccupationalCredential",
-          "credentialCategory": "Professional Certification",
-          "name": "PA1 Certified"
-        },
-        {
-          "@type": "EducationalOccupationalCredential",
-          "credentialCategory": "Professional Certification",
-          "name": "PA6 AW Certified"
-        }
-      ]
-    }
-    </script>
     
     <style>
         * {
@@ -376,6 +342,278 @@
             }
         }
     </style>
+
+<!-- ═══════════════════════════════════════════════════════════════════
+     HOMEPAGE SCHEMA MARKUP - WEED CONTROL KENT
+     Copy this code and paste it in the <head> section of index.html
+     Place it BEFORE the closing </head> tag
+     ═══════════════════════════════════════════════════════════════════ -->
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "@id": "https://weedcontrolkent.co.uk/#business",
+  "name": "Weed Control Kent",
+  "legalName": "Roundwood Solutions Limited",
+  "alternateName": "Roundwood Solutions",
+  "url": "https://weedcontrolkent.co.uk",
+  "logo": "https://weedcontrolkent.co.uk/weed-control-kent-logo.png",
+  "image": [
+    "https://weedcontrolkent.co.uk/weed-control-kent-logo.png"
+  ],
+  "description": "Professional BALI-accredited commercial weed control services across Kent. PA1 & PA6 AW certified technicians. Serving businesses, schools, industrial estates, and commercial properties.",
+  "foundingDate": "2023-07",
+  "founder": [
+    {
+      "@type": "Person",
+      "name": "Ben Brice"
+    },
+    {
+      "@type": "Person",
+      "name": "Ricky James"
+    }
+  ],
+  "slogan": "A specialist service by Roundwood Solutions Ltd",
+  "telephone": "+447545642021",
+  "email": "office@roundwoodsolutions.co.uk",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Rochester",
+    "addressRegion": "Kent",
+    "addressCountry": "GB"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "51.3886",
+    "longitude": "0.5050"
+  },
+  "areaServed": [
+    {
+      "@type": "City",
+      "name": "Chatham"
+    },
+    {
+      "@type": "City",
+      "name": "Rochester"
+    },
+    {
+      "@type": "City",
+      "name": "Gillingham"
+    },
+    {
+      "@type": "City",
+      "name": "Strood"
+    },
+    {
+      "@type": "City",
+      "name": "Rainham"
+    },
+    {
+      "@type": "City",
+      "name": "Dartford"
+    },
+    {
+      "@type": "City",
+      "name": "Gravesend"
+    },
+    {
+      "@type": "City",
+      "name": "Maidstone"
+    },
+    {
+      "@type": "City",
+      "name": "Canterbury"
+    },
+    {
+      "@type": "City",
+      "name": "Ashford"
+    },
+    {
+      "@type": "State",
+      "name": "Kent"
+    }
+  ],
+  "priceRange": "££",
+  "currenciesAccepted": "GBP",
+  "paymentAccepted": "Bank Transfer, Invoice",
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "08:00",
+      "closes": "17:00"
+    }
+  ],
+  "sameAs": [
+    "https://roundwoodsolutions.co.uk"
+  ],
+  "hasCredential": [
+    {
+      "@type": "EducationalOccupationalCredential",
+      "credentialCategory": "Professional Certification",
+      "name": "BALI Accreditation",
+      "recognizedBy": {
+        "@type": "Organization",
+        "name": "British Association of Landscape Industries"
+      }
+    },
+    {
+      "@type": "EducationalOccupationalCredential",
+      "credentialCategory": "Professional Certification",
+      "name": "PA1 - Safe Handling and Application of Pesticides",
+      "recognizedBy": {
+        "@type": "Organization",
+        "name": "NPTC"
+      }
+    },
+    {
+      "@type": "EducationalOccupationalCredential",
+      "credentialCategory": "Professional Certification",
+      "name": "PA6A - Safe Application Using Pedestrian Equipment",
+      "recognizedBy": {
+        "@type": "Organization",
+        "name": "NPTC"
+      }
+    },
+    {
+      "@type": "EducationalOccupationalCredential",
+      "credentialCategory": "Professional Certification",
+      "name": "PA6AW - Safe Application Near Water",
+      "recognizedBy": {
+        "@type": "Organization",
+        "name": "NPTC"
+      }
+    }
+  ],
+  "makesOffer": [
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "Commercial Weed Control",
+        "description": "Professional weed control services for commercial properties, businesses, and industrial estates",
+        "provider": {
+          "@id": "https://weedcontrolkent.co.uk/#business"
+        },
+        "areaServed": {
+          "@type": "State",
+          "name": "Kent"
+        }
+      }
+    },
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "Car Park Weed Control",
+        "description": "Specialist weed control for car parks and paved areas",
+        "provider": {
+          "@id": "https://weedcontrolkent.co.uk/#business"
+        },
+        "areaServed": {
+          "@type": "State",
+          "name": "Kent"
+        }
+      }
+    },
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "School Grounds Weed Control",
+        "description": "Safe, professional weed control for schools and educational facilities",
+        "provider": {
+          "@id": "https://weedcontrolkent.co.uk/#business"
+        },
+        "areaServed": {
+          "@type": "State",
+          "name": "Kent"
+        }
+      }
+    },
+    {
+      "@type": "Offer",
+      "itemOffered": {
+        "@type": "Service",
+        "name": "Industrial Estate Weed Control",
+        "description": "Comprehensive weed control for industrial estates and business parks",
+        "provider": {
+          "@id": "https://weedcontrolkent.co.uk/#business"
+        },
+        "areaServed": {
+          "@type": "State",
+          "name": "Kent"
+        }
+      }
+    }
+  ],
+  "additionalType": [
+    "https://schema.org/LandscapingBusiness",
+    "https://schema.org/ProfessionalService"
+  ],
+  "knowsAbout": [
+    "Weed Control",
+    "Pesticide Application",
+    "Commercial Grounds Maintenance",
+    "BALI Standards",
+    "Professional Landscaping"
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "@id": "https://weedcontrolkent.co.uk/#website",
+  "url": "https://weedcontrolkent.co.uk",
+  "name": "Weed Control Kent",
+  "description": "Professional commercial weed control services across Kent",
+  "publisher": {
+    "@id": "https://weedcontrolkent.co.uk/#business"
+  },
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://weedcontrolkent.co.uk/?s={search_term_string}"
+    },
+    "query-input": "required name=search_term_string"
+  },
+  "inLanguage": "en-GB"
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "@id": "https://weedcontrolkent.co.uk/#organization",
+  "name": "Roundwood Solutions Limited",
+  "alternateName": "Weed Control Kent",
+  "url": "https://weedcontrolkent.co.uk",
+  "logo": "https://weedcontrolkent.co.uk/weed-control-kent-logo.png",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+447545642021",
+    "contactType": "customer service",
+    "email": "office@roundwoodsolutions.co.uk",
+    "areaServed": "GB",
+    "availableLanguage": "en"
+  },
+  "sameAs": [
+    "https://roundwoodsolutions.co.uk"
+  ]
+}
+</script>
+
 </head>
 <body>
     <header>
